--- a/optimset.tex
+++ b/optimset.tex
@@ -43,7 +43,7 @@
 \usepackage[sf,bf,nobottomtitles*,]{titlesec}
 \usepackage{abstract}
 \titleformat{\section}{\normalfont\large\bfseries\sffamily}{\thesection}{1em}{}
-\titleformat{\subsection}{\normalfont\normalsize\bfseries}{\thesubsection}{1em}{}
+\titleformat{\subsection}{\normalfont\normalsize\bfseries\sffamily}{\thesubsection}{1em}{}
 \renewcommand\abstractnamefont{\normalfont\small\bfseries\sffamily}
 
 % Space between lines
